tests/bad/18_invalid_operator.src
# Test: Invalid operator
void main([string] args) {
    return 5 ** 2;  # Invalid operator
}
